--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,8 @@ name: ARK Server Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:
+      - 'v*'
 
 jobs:
   # # 只包含方舟服务器的基础镜像-ubuntu-2204
@@ -77,9 +76,6 @@ jobs:
         large-packages: true
         docker-images: true
         swap-storage: true
-    - name: Set current date as env variable
-      run: echo "DATE_TAG=$(date +'%Y%m%d-%H%M')" >> $GITHUB_ENV
-    
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
@@ -87,9 +83,12 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     
     - name: Build the Docker image
-      run: docker build . --file dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/arkserver:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/arkserver:${{ env.DATE_TAG }}
+      run: |
+        TAG=${GITHUB_REF#refs/tags/}
+        docker build . --file dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/arkserver:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/arkserver:$TAG
     
     - name: Push Docker images
       run: |
+        TAG=${GITHUB_REF#refs/tags/}
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/arkserver:latest
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/arkserver:${{ env.DATE_TAG }}
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/arkserver:$TAG
