更新README文件，添加关于Mods下载/更新流程不完善的说明，并建议在服务器启动前更新Mods。同时，修改server.cfg文件以启用Mods自动更新。

--- a/server.cfg
+++ b/server.cfg
@@ -4,6 +4,6 @@ SERVER_PASSWORD=
 ADMIN_PASSWORD=Admin
 MAX_PLAYERS=70
 UPDATE_SERVER=false
-UPDATE_MODS=false
+UPDATE_MODS=true
 MODIDS="895711211,669673294,1136125765,554678442,926028694,676288311,876038468,566885854"
 SERVER_ARGS="-NoBattlEye -servergamelog -structurememopts -UseStructureStasisGrid -SecureSendArKPayload -UseItemDupeCheck -UseSecureSpawnRules -nosteamclient -game -server -log -MinimumTimeBetweenInventoryRetrieval=3600 -newsaveformat -usestore" 
