--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,10 +19,10 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     
     - name: Build the Docker image
-      run: cd ASE-Server-base/steamcmd && docker build . --file dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/ASE-Server-base:steamcmd
+      run: cd ase-server-base/steamcmd && docker build . --file dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/ase-server-base:steamcmd
     
     - name: Push Docker images
-      run: cd ASE-Server-base/steamcmd && docker push ${{ secrets.DOCKERHUB_USERNAME }}/ASE-Server-base:steamcmd
+      run: cd ase-server-base/steamcmd && docker push ${{ secrets.DOCKERHUB_USERNAME }}/ase-server-base:steamcmd
 
   # 最终镜像
   ASE-Server:
@@ -49,10 +49,10 @@ jobs:
     - name: Build the Docker image
       run: |
         TAG=${GITHUB_REF#refs/tags/}
-        docker build . --file dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/ASE-Server:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/ASE-Server:$TAG
+        docker build . --file dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/ase-server:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/ase-server:$TAG
     
     - name: Push Docker images
       run: |
         TAG=${GITHUB_REF#refs/tags/}
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/ASE-Server:latest
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/ASE-Server:$TAG
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/ase-server:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/ase-server:$TAG
