--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   servers:
-    image: tbro98/arkserver:latest
-    container_name: arkserver
+    image: tbro98/ase-server:latest
+    container_name: ase-server
     restart: unless-stopped
     ports:
       - "7777:7777/udp"
