--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,27 +6,27 @@ on:
       - 'v*'
 
 jobs:
-  # 只包含方舟服务器的基础镜像-steamcmd
-  ASE-Server-base:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
+  # # 只包含方舟服务器的基础镜像-steamcmd
+  # ASE-Server-base:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v4
     
-    - name: Login to DockerHub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #   - name: Login to DockerHub
+  #     uses: docker/login-action@v3
+  #     with:
+  #       username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #       password: ${{ secrets.DOCKERHUB_TOKEN }}
     
-    - name: Build the Docker image
-      run: cd ASE-Server-base/steamcmd && docker build . --file dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/ase-server-base:steamcmd
+  #   - name: Build the Docker image
+  #     run: cd ASE-Server-base/steamcmd && docker build . --file dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/ase-server-base:steamcmd
     
-    - name: Push Docker images
-      run:  docker push ${{ secrets.DOCKERHUB_USERNAME }}/ase-server-base:steamcmd
+  #   - name: Push Docker images
+  #     run:  docker push ${{ secrets.DOCKERHUB_USERNAME }}/ase-server-base:steamcmd
 
   # 最终镜像
   ASE-Server:
-    needs: ASE-Server-base
+    # needs: ASE-Server-base
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
