--- a/.github/workflows/ase-server-base.yml
+++ b/.github/workflows/ase-server-base.yml
@@ -23,3 +23,35 @@ jobs:
     
     - name: Push Docker images
       run:  docker push ${{ secrets.DOCKERHUB_USERNAME }}/ase-server-base:steamcmd 
+    # 最终镜像
+  ASE-Server:
+    needs: ASE-Server-base
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Free disk space
+      uses: jlumbroso/free-disk-space@main
+      with:
+        tool-cache: true
+        android: true
+        dotnet: true
+        haskell: true
+        large-packages: true
+        docker-images: true
+        swap-storage: true
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+    - name: Build the Docker image
+      run: |
+        TAG=${GITHUB_REF#refs/tags/}
+        docker build . --file dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/ase-server:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/ase-server:$TAG
+    
+    - name: Push Docker images
+      run: |
+        TAG=${GITHUB_REF#refs/tags/}
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/ase-server:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/ase-server:$TAG 
